--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="img">
         <img src="images/image-qr-code.png" alt="QR">
       </div>
-        <h2>Improve your front-end <br>skills by building projects</h2>
+        <p class="text-a">Improve your front-end <br>skills by building projects</p>
         <p>Scan the QR code to visit Frontend<br>Mentor and take your coding skills to<br>the next level.</p>
     </div>
   </div>
