--- a/index.html
+++ b/index.html
@@ -12,14 +12,18 @@
   <title>Frontend Mentor | QR code component</title>
 </head>
 <body>
-  <div class="container">
-    <div class="container-a">
-      <div class="img">
-        <img src="images/image-qr-code.png" alt="QR">
-      </div>
-        <p class="text-a">Improve your front-end <br>skills by building projects</p>
-        <p>Scan the QR code to visit Frontend<br>Mentor and take your coding skills to<br>the next level.</p>
+  <main>
+    <div class="container">
+      <div class="qr-card">
+        <div class="img">
+             <img src="images/image-qr-code.png" alt="QR">
+          </div>
+        <div class="text-container">
+          <h1>Improve your front-end skills by building projects</h1>
+          <p>Scan the QR code to visit Frontend <br>Mentor and take your coding skills to<br>the next level.</p>
+        </div>
+      </div>    
     </div>
-  </div>
+  </main>
 </body>
 </html>
